# mps

./: .gitignore  Analysis.MD  Analysis.zh-CN.MD  Cargo.toml  README.md  cbindgen.toml  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/mps-core/: Cargo.toml  build.rs
crates/mps-core/include/: rigid_body.h
crates/mps-core/src/: lib.rs
crates/mps-core/src/rapier/: events.rs  forces.rs  mod.rs  voxel.rs
crates/mps-core/src/rapier/ffi/: types.rs
crates/mps-formula/: Cargo.toml
crates/mps-formula/src/: acoustics.rs  astrophysics.rs  biomechanics.rs  celestial_data.rs  chaos.rs  continuum.rs  control_theory.rs  electromagnetism.rs  error.rs  fluid.rs  gravitational_models.rs  integrators.rs  lib.rs  material_mechanics.rs  math.rs  nuclear.rs  physchem.rs  plasma.rs  quantum.rs  relativity.rs  softbody.rs  spaceflight.rs  superfluidity.rs  thermodynamics.rs  topology.rs  transmission.rs  wave_optics.rs
crates/mps-formula/src/ffi/: convert.rs  types.rs
crates/mps-jni/: Cargo.toml
crates/mps-jni/src/: lib.rs
crates/mps-test/: Cargo.toml
crates/mps-wasm/: Cargo.toml
crates/mps-wasm/src/: celestial.rs  collider.rs  events.rs  lib.rs  types.rs  world.rs
docs/: i18n.js  index.html  style.css
docs/core/: collider.html  joints.html  query.html  rigid-body.html  world.html
docs/domain/: astrophysics.html  formulas.html  spaceflight.html
docs/i18n/: en.json  zh.json
docs/integration/: arena.html  ecosystem.html  java.html
docs/physics/: events.html  forces.html  gravity.html  terrain.html
docs/reference/: api.html  performance.html  precision.html
include/: rigid_body.h
src/: collider.rs  compat.rs  crbtree.rs  ffi.rs  lib.rs  mjcf.rs  neural.rs  rigid_body.rs  rtree.rs  urdf.rs  world.rs
src/abi/: ffm.rs  jni.rs  mod.rs
src/rapier/: acoustics.rs  aerodynamics.rs  anvilkit.rs  astrophysics.rs  biomechanics.rs  chaos.rs  collider.rs  compat.rs  continuum.rs  control_theory.rs  controller.rs  dop.rs  electromagnetism.rs  events.rs  ffi.rs  fluid.rs  forces.rs  fracture.rs  interaction.rs  joints.rs  math.rs  mod.rs  molecular.rs  neural.rs  physchem.rs  plasma.rs  quantum.rs  query.rs  relativity.rs  rigid_body.rs  rtree.rs  softbody.rs  spaceflight.rs  superfluidity.rs  thermodynamics.rs  topology.rs  trajectory.rs  transmission.rs  voxel.rs  world.rs
src/rapier/ffi/: types.rs
test21/: build.gradle  gradle.properties  settings.gradle
test21/src/main/java/org/polaris2023/msp_rigid_body/: JniSmokeTest.java  RigidBody.java  RigidBodyNative.java
test21/src/main/java/team/dove/rigidbody/: JniSmokeTest.java  RigidBodyNative.java
test25/: build.gradle  gradle.properties  settings.gradle
(+14 files in other folders)
