[package]
name = "mps_rigid_body"
version = "0.1.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapier3d = { package = "rapier3d-f64", version = "0.33.0", features = ["parallel"] }
ljni = { version = "0.21.0", package = "jni" }
parking_lot = "0.12.5"
hashbrown = "0.17.1"
smallvec = "1.15.2"
mimalloc = "0.1.52"


[build-dependencies]
cbindgen = "0.29.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
